--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,5 @@
 ---
 - hosts: localhost
-  remote_user: root
+  become: true
   roles:
-    - ansible-role-checkmk-agent
+    - ../../ansible-role-checkmk-agent
